--- a/projet_jeux/css/stylejs.css
+++ b/projet_jeux/css/stylejs.css
@@ -1,7 +1,3 @@
-.Bulb {
-    margin-top:50px; text-align: center;
-}
-
-.Display {
-    margin-top:50px; text-align: center;
+.block {
+    margin-top:50px;
 }
